Added event callbacks and dependency injection

--- a/Client/BlazingShop.Client.csproj
+++ b/Client/BlazingShop.Client.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Shared\BlazingShop.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
