--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "connectionStringS": {
+    "DefaultConnection": "server=BPHIRI-DEV\\SQLEXPRESS01;database=blazingshop;trusted_connection=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
